Clean up remaining backend Sonar issues